--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,10 @@ jobs:
             - run: go version
 
             - name: Install Dependecies
-              run: go get .
+              run: |
+                go get .\src
+                go get .\src\components
+                go get .\src\handlers
 
             - name: Build
               run: go build -v ./...
