--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,9 @@ jobs:
             - name: Build
               run: go build -v ./...
 
+            - name: Check File Paths
+              run: ls
+
             - name: Create Release
               uses: actions/upload-artifact@v4
               with:
