--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,10 +29,11 @@ jobs:
                 go get .\src\handlers
 
             - name: Build
-              run: go build -v ./...
+              run: go build -v .\src
 
             - name: Check File Paths
               run: |
+                ls
                 cd .\src
                 ls
 
