--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
                 go get .\src\handlers
 
             - name: Build
-              run: go build -o VTApp -v .\src
+              run: go build -o VTApp.exe -v .\src
 
             - name: Check File Paths
               run: |
