--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,4 +45,4 @@ jobs:
                 prerelease: true
                 title: "Unstable/Development Build"
                 files: |
-                    D:\a\VTApp\VTApp\VTApp.exe
+                    .\VTApp.exe
