--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ on:
             - master
 
 jobs:
-    release:
+    build:
         runs-on: windows-latest
 
         steps:
@@ -37,12 +37,36 @@ jobs:
                 cd .\src
                 ls
 
-            - name: Create Release
-              uses: "marvinpinto/action-automatic-releases@latest"
+            - name: Upload Artifact
+              uses: actions/upload-artifact@v4
+              with:
+                name: VTApp
+                path: D:\a\VTApp\VTApp\VTApp.exe
+                if-no-files-found: error
+
+    pre-release:
+        needs: build
+        name: "Pre Release"
+        runs-on: "ubuntu-latest"
+
+        steps:
+            - uses: actions/checkout@v2
+
+            - name: Download artifact
+              uses: actions/download-artifact@v4
+              with:
+                name: VTApp
+                path: VTApp.zip/VTApp.exe
+
+            - name: "Build & test"
+              run: |
+                echo "done!"
+
+            - uses: "marvinpinto/action-automatic-releases@latest"
               with:
                 repo_token: "${{ secrets.GITHUB_TOKEN }}"
                 automatic_release_tag: "latest"
                 prerelease: true
-                title: "Unstable/Development Build"
+                title: "Development Build"
                 files: |
-                    .\VTApp.exe
+                  VTApp.zip/VTApp.exe
