Updated workflow for OS specific builds

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Build
 
 on:
     push:
@@ -9,7 +9,8 @@ on:
             - master
 
 jobs:
-    build:
+    build_win:
+        name: Build VTApp Windows x64
         runs-on: windows-latest
 
         steps:
@@ -40,13 +41,13 @@ jobs:
             - name: Upload Artifact
               uses: actions/upload-artifact@v4
               with:
-                name: VTApp
-                path: D:\a\VTApp\VTApp\VTApp.exe
+                name: VTApp_windows-x64
+                path: D:\a\VTApp\VTApp\VTApp_windows-x64.exe
                 if-no-files-found: error
 
-    pre-release:
-        needs: build
-        name: "Pre Release"
+    release_win:
+        needs: build_win
+        name: Release VTApp Windows x64 (Unstable/Development Build)
         runs-on: "ubuntu-latest"
 
         steps:
@@ -55,8 +56,8 @@ jobs:
             - name: Download artifact
               uses: actions/download-artifact@v4
               with:
-                name: VTApp
-                path: VTApp.zip/VTApp.exe
+                name: VTApp_windows-x64
+                path: VTApp_windows-x64.zip/VTApp_windows-x64.exe
 
             - name: "Build & test"
               run: |
@@ -69,4 +70,4 @@ jobs:
                 prerelease: true
                 title: "Development Build"
                 files: |
-                  VTApp.zip/VTApp.exe
+                  VTApp_windows-x64.zip/VTApp_windows-x64.exe
